Netsci website mobile friendly
Netsci website mobile friendly

--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -4059,7 +4059,7 @@
 					<key>page46 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-06-09T18:00:21Z</date>
+						<date>2018-06-10T09:16:05Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -4428,11 +4428,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								1rWjFpzz6BnF
-								/9bVSudIpQ==
+								A6yDk9I9xf6L
+								xSIQNMNf6g==
 								</data>
 								<key>Size</key>
-								<integer>104192</integer>
+								<integer>104194</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -4711,7 +4711,7 @@
 					<key>page48 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-06-09T18:00:21Z</date>
+						<date>2018-06-10T09:16:05Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -5050,11 +5050,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								5KPIlSydomtr
-								v+TOjLkHMQ==
+								IM24R10DlF7D
+								oqV2vNtt1g==
 								</data>
 								<key>Size</key>
-								<integer>95406</integer>
+								<integer>95408</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -5705,7 +5705,7 @@
 					<key>page52 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-06-09T18:57:03Z</date>
+						<date>2018-06-10T09:16:05Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -5814,11 +5814,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								16bmcvJNjhlV
-								anK+9v2VAw==
+								9hNCrq1Qtf9F
+								btqBYZ27TA==
 								</data>
 								<key>Size</key>
-								<integer>58700</integer>
+								<integer>57840</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -5831,7 +5831,7 @@
 					<key>page53 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-06-09T18:58:51Z</date>
+						<date>2018-06-10T08:59:04Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -5876,15 +5876,15 @@
 								<key>Size</key>
 								<integer>146527</integer>
 							</dict>
-							<key>files/stacks-image-ae82c9c.jpg</key>
+							<key>files/stacks-image-ae82c9c-650x406.jpg</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								htVRWvdP8e2u
-								FioTWTJ/HA==
+								CoOaL7t+irO6
+								VVGp7MrraQ==
 								</data>
 								<key>Size</key>
-								<integer>228758</integer>
+								<integer>73705</integer>
 							</dict>
 							<key>files/stacks-image-c2c3ed0.jpg</key>
 							<dict>
@@ -5930,11 +5930,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								k/o2B0zhghET
-								G7Vb6Pvzfg==
+								ZaB4kjEitAqD
+								dZG86Q2o8Q==
 								</data>
 								<key>Size</key>
-								<integer>49231</integer>
+								<integer>48900</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -5947,7 +5947,7 @@
 					<key>page54 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-06-09T18:58:51Z</date>
+						<date>2018-06-10T09:05:41Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -5996,8 +5996,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								fs2uf64UVOUY
-								X8vgaW+8Gg==
+								h+Sqcn3fjhEs
+								HquPUNEFbg==
 								</data>
 								<key>Size</key>
 								<integer>91863</integer>
@@ -6016,11 +6016,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								GGSbiV1GBLki
-								CMHgyIgWvg==
+								dz4PhxIsVfUP
+								hnGGhLbhhA==
 								</data>
 								<key>Size</key>
-								<integer>32436</integer>
+								<integer>32464</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -6033,7 +6033,7 @@
 					<key>page55 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-06-09T18:58:51Z</date>
+						<date>2018-06-10T08:52:55Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -6092,11 +6092,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								GD5T5OYfxGr9
-								FPRK2qV/Wg==
+								4TFQivcCdY+3
+								3HR3XPAmqg==
 								</data>
 								<key>Size</key>
-								<integer>37811</integer>
+								<integer>37839</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -6109,7 +6109,7 @@
 					<key>page56 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-06-09T19:02:46Z</date>
+						<date>2018-06-10T09:05:41Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -6158,8 +6158,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								/UHa3CCF/9mm
-								0SGe9JnGzA==
+								MxQ8uWoZyscQ
+								KCEj0c6G3Q==
 								</data>
 								<key>Size</key>
 								<integer>91863</integer>
@@ -6178,11 +6178,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								CZ/aA1CrDKkA
-								G/eAjIwYcg==
+								fF+9gr6N9TSf
+								VI3cPH/IgQ==
 								</data>
 								<key>Size</key>
-								<integer>32416</integer>
+								<integer>32444</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -6195,7 +6195,7 @@
 					<key>page57 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-06-09T18:58:51Z</date>
+						<date>2018-06-10T08:52:55Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -6254,11 +6254,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								wKZkqP3/9awr
-								dt9vc3jDfg==
+								VCMCe6V8OOLq
+								siuMhgWEDg==
 								</data>
 								<key>Size</key>
-								<integer>33311</integer>
+								<integer>33339</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -6271,7 +6271,7 @@
 					<key>page58 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-06-09T19:01:23Z</date>
+						<date>2018-06-10T08:52:55Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -6330,11 +6330,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								cx9YvEa6KH2A
-								F+RAzbkf4w==
+								HQ4b9BGrbHmz
+								1I8j9FmKxw==
 								</data>
 								<key>Size</key>
-								<integer>31488</integer>
+								<integer>31516</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -6347,7 +6347,7 @@
 					<key>page59 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-06-09T18:58:51Z</date>
+						<date>2018-06-10T09:05:41Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -6396,8 +6396,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								YWC9nwKlIv9g
-								Oz2c1G3ZSg==
+								9m314+wOQ8YN
+								I0rbyqh+qA==
 								</data>
 								<key>Size</key>
 								<integer>91908</integer>
@@ -6416,11 +6416,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Czh8doCrGHsm
-								QW3GJRIcAw==
+								0LAFyheRf6y2
+								1bd9pZqdhA==
 								</data>
 								<key>Size</key>
-								<integer>32419</integer>
+								<integer>32447</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -7077,7 +7077,7 @@
 					<key>rw:document:extrafiles - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-06-09T19:01:23Z</date>
+						<date>2018-06-10T08:50:16Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -7126,8 +7126,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								WKt4I5RfgL4I
-								waf26wHfiQ==
+								snsEkfRfW2Pz
+								nXBfNH6X4A==
 								</data>
 								<key>Size</key>
 								<integer>4391</integer>
@@ -7143,7 +7143,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-06-09T18:57:03Z</date>
+						<date>2018-06-10T08:50:16Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -12178,7 +12178,7 @@
 					<key>UniqueBackupName</key>
 					<string>986C317C-4106-4888-8861-F3B56F718A72_rwbackup</string>
 					<key>UserAgentResizingPreset</key>
-					<integer>0</integer>
+					<integer>3</integer>
 					<key>WantsXMLSiteMap</key>
 					<true/>
 					<key>WebClipIcon</key>
