--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/02-Symposium---Science-of-stories/ChildPages/1-Details/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/02-Symposium---Science-of-stories/ChildPages/1-Details/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-06-09T18:00:21Z</date>
+						<date>2018-06-10T09:16:05Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -372,11 +372,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								5KPIlSydomtr
-								v+TOjLkHMQ==
+								IM24R10DlF7D
+								oqV2vNtt1g==
 								</data>
 								<key>Size</key>
-								<integer>95406</integer>
+								<integer>95408</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
