--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/04-NetSci-2019/ChildPages/2-NetSci-Registration/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/04-NetSci-2019/ChildPages/2-NetSci-Registration/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-06-09T18:58:51Z</date>
+						<date>2018-06-10T09:05:41Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -84,8 +84,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								fs2uf64UVOUY
-								X8vgaW+8Gg==
+								h+Sqcn3fjhEs
+								HquPUNEFbg==
 								</data>
 								<key>Size</key>
 								<integer>91863</integer>
@@ -104,11 +104,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								GGSbiV1GBLki
-								CMHgyIgWvg==
+								dz4PhxIsVfUP
+								hnGGhLbhhA==
 								</data>
 								<key>Size</key>
-								<integer>32436</integer>
+								<integer>32464</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
