--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/04-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/04-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-06-09T18:58:51Z</date>
+						<date>2018-06-10T08:52:55Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -94,11 +94,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								GD5T5OYfxGr9
-								FPRK2qV/Wg==
+								4TFQivcCdY+3
+								3HR3XPAmqg==
 								</data>
 								<key>Size</key>
-								<integer>37811</integer>
+								<integer>37839</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
