--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/04-NetSci-2019/ChildPages/6-NetSci-Sponsors/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/04-NetSci-2019/ChildPages/6-NetSci-Sponsors/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-06-09T18:58:51Z</date>
+						<date>2018-06-10T09:05:41Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -84,8 +84,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								YWC9nwKlIv9g
-								Oz2c1G3ZSg==
+								9m314+wOQ8YN
+								I0rbyqh+qA==
 								</data>
 								<key>Size</key>
 								<integer>91908</integer>
@@ -104,11 +104,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Czh8doCrGHsm
-								QW3GJRIcAw==
+								0LAFyheRf6y2
+								1bd9pZqdhA==
 								</data>
 								<key>Size</key>
-								<integer>32419</integer>
+								<integer>32447</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
