--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/01-Symposium---Health-and-Wellness/ChildPages/1-Details/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/01-Symposium---Health-and-Wellness/ChildPages/1-Details/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-06-09T18:00:21Z</date>
+						<date>2018-06-10T09:16:05Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -402,11 +402,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								1rWjFpzz6BnF
-								/9bVSudIpQ==
+								A6yDk9I9xf6L
+								xSIQNMNf6g==
 								</data>
 								<key>Size</key>
-								<integer>104192</integer>
+								<integer>104194</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
