--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/04-NetSci-2019/ChildPages/1-NetSci-Logistics/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/04-NetSci-2019/ChildPages/1-NetSci-Logistics/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-06-09T18:57:03Z</date>
+						<date>2018-06-10T09:16:05Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -144,11 +144,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								16bmcvJNjhlV
-								anK+9v2VAw==
+								9hNCrq1Qtf9F
+								btqBYZ27TA==
 								</data>
 								<key>Size</key>
-								<integer>58700</integer>
+								<integer>57840</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
