--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/04-NetSci-2019/ChildPages/4-NetSci-Calls/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/04-NetSci-2019/ChildPages/4-NetSci-Calls/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-06-09T19:02:46Z</date>
+						<date>2018-06-10T09:05:41Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -84,8 +84,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								/UHa3CCF/9mm
-								0SGe9JnGzA==
+								MxQ8uWoZyscQ
+								KCEj0c6G3Q==
 								</data>
 								<key>Size</key>
 								<integer>91863</integer>
@@ -104,11 +104,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								CZ/aA1CrDKkA
-								G/eAjIwYcg==
+								fF+9gr6N9TSf
+								VI3cPH/IgQ==
 								</data>
 								<key>Size</key>
-								<integer>32416</integer>
+								<integer>32444</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
