--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/04-NetSci-2019/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/04-NetSci-2019/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-06-09T18:58:51Z</date>
+						<date>2018-06-10T08:59:04Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -80,15 +80,15 @@
 								<key>Size</key>
 								<integer>146527</integer>
 							</dict>
-							<key>files/stacks-image-ae82c9c.jpg</key>
+							<key>files/stacks-image-ae82c9c-650x406.jpg</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								htVRWvdP8e2u
-								FioTWTJ/HA==
+								CoOaL7t+irO6
+								VVGp7MrraQ==
 								</data>
 								<key>Size</key>
-								<integer>228758</integer>
+								<integer>73705</integer>
 							</dict>
 							<key>files/stacks-image-c2c3ed0.jpg</key>
 							<dict>
@@ -134,11 +134,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								k/o2B0zhghET
-								G7Vb6Pvzfg==
+								ZaB4kjEitAqD
+								dZG86Q2o8Q==
 								</data>
 								<key>Size</key>
-								<integer>49231</integer>
+								<integer>48900</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
