edits to contact page added linkedin
edits to contact page added linkedin

--- a/vermontcomplexsystems-foundation.rw/Pages/10-003Cheader003ECommunity002B003C002Fheader003E/ChildPages/6-Contact/PageAttributes/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/10-003Cheader003ECommunity002B003C002Fheader003E/ChildPages/6-Contact/PageAttributes/Contents.plist
@@ -20,9 +20,7 @@
 				</dict>
 				<key>ColourStyles</key>
 				<dict>
-					<key>Glide</key>
-					<dict/>
-					<key>Ruby</key>
+					<key>Veerle</key>
 					<dict/>
 				</dict>
 				<key>CreditRapidWeaver</key>
@@ -50,7 +48,7 @@ margin-bottom:1rem;
 				<key>FolderName</key>
 				<string>contact</string>
 				<key>HasCustomThemeStyle</key>
-				<false/>
+				<true/>
 				<key>Hidden</key>
 				<false/>
 				<key>ImageFormat</key>
