added JG and CM to organizers
added JG and CM to organizers

--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -5821,7 +5821,7 @@
 					<key>page53 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-06-10T08:59:04Z</date>
+						<date>2018-06-14T09:16:27Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -5920,11 +5920,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								ZaB4kjEitAqD
-								dZG86Q2o8Q==
+								SymOkPX7yjZV
+								UzpFMludNA==
 								</data>
 								<key>Size</key>
-								<integer>48900</integer>
+								<integer>49323</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -6261,7 +6261,7 @@
 					<key>page58 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-06-10T08:52:55Z</date>
+						<date>2018-06-14T09:16:27Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -6320,11 +6320,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								HQ4b9BGrbHmz
-								1I8j9FmKxw==
+								bmWt9R8Vt8Dv
+								n5K7IGudNA==
 								</data>
 								<key>Size</key>
-								<integer>31516</integer>
+								<integer>31939</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
