--- a/vermontcomplexsystems-foundation.rw/Pages/10-003Cheader003ECommunity002B003C002Fheader003E/ChildPages/6-Contact/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/10-003Cheader003ECommunity002B003C002Fheader003E/ChildPages/6-Contact/Contents.plist
@@ -15,6 +15,8 @@
 				<string>Foundation</string>
 				<key>ID</key>
 				<string>page43</string>
+				<key>MostRecentlySelectedStyleName</key>
+				<string>Theme Default</string>
 				<key>PageTitle</key>
 				<string>Contact</string>
 				<key>PluginClassName</key>
