--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/04-NetSci-2019/ChildPages/7-NetSci-Organizers/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/04-NetSci-2019/ChildPages/7-NetSci-Organizers/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-06-10T08:52:55Z</date>
+						<date>2018-06-14T09:16:27Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -94,11 +94,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								HQ4b9BGrbHmz
-								1I8j9FmKxw==
+								bmWt9R8Vt8Dv
+								n5K7IGudNA==
 								</data>
 								<key>Size</key>
-								<integer>31516</integer>
+								<integer>31939</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
