--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/04-NetSci-2019/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/04-NetSci-2019/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-06-10T08:59:04Z</date>
+						<date>2018-06-14T09:16:27Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -134,11 +134,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								ZaB4kjEitAqD
-								dZG86Q2o8Q==
+								SymOkPX7yjZV
+								UzpFMludNA==
 								</data>
 								<key>Size</key>
-								<integer>48900</integer>
+								<integer>49323</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
