Added Jenny Bower SOS Faculty
Added Jenny Bower SOS Faculty

--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -2249,7 +2249,7 @@
 					<key>page29 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-06-09T18:00:21Z</date>
+						<date>2018-06-22T14:56:42Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -2298,8 +2298,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								WTYkn1V4WAAW
-								zalnyuX+uQ==
+								LLMXV0RvEfeY
+								JPrDqS2Y7w==
 								</data>
 								<key>Size</key>
 								<integer>24594</integer>
@@ -2579,7 +2579,7 @@
 					<key>page34 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-06-09T18:00:21Z</date>
+						<date>2018-06-22T14:56:42Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -2848,8 +2848,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								gFM7klIxzJb2
-								36FbIAcSpQ==
+								+ucAoFP8hvcS
+								yBzTnTpVFg==
 								</data>
 								<key>Size</key>
 								<integer>63272</integer>
@@ -2865,7 +2865,7 @@
 					<key>page35 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-06-09T18:00:21Z</date>
+						<date>2018-06-22T15:31:13Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -2939,6 +2939,16 @@
 								</data>
 								<key>Size</key>
 								<integer>337058</integer>
+							</dict>
+							<key>files/stacks-image-1b7cfd7-250x250.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								6850vL6xR3zu
+								I585rDTQ9A==
+								</data>
+								<key>Size</key>
+								<integer>83796</integer>
 							</dict>
 							<key>files/stacks-image-1cd049f-250x256.png</key>
 							<dict>
@@ -3074,11 +3084,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								VWDniOlzjd6u
-								AIUpg/9WAw==
+								We9MSrI7ueEx
+								Y240LtnmgA==
 								</data>
 								<key>Size</key>
-								<integer>114564</integer>
+								<integer>116752</integer>
 							</dict>
 							<key>files/stacks_page_page35.js</key>
 							<dict>
@@ -3094,11 +3104,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								wyNHSVyliYeE
-								6cYo8bkYVA==
+								qhk78JU1VgiV
+								KsB3J23jpw==
 								</data>
 								<key>Size</key>
-								<integer>56573</integer>
+								<integer>58044</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -4049,7 +4059,7 @@
 					<key>page46 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-06-10T09:16:05Z</date>
+						<date>2018-06-22T14:56:42Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -4418,11 +4428,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								A6yDk9I9xf6L
-								xSIQNMNf6g==
+								Efy4KA44qoM4
+								e5cD+eQpvw==
 								</data>
 								<key>Size</key>
-								<integer>104194</integer>
+								<integer>104368</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -4701,7 +4711,7 @@
 					<key>page48 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-06-10T09:16:05Z</date>
+						<date>2018-06-22T16:37:40Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -4775,6 +4785,16 @@
 								</data>
 								<key>Size</key>
 								<integer>105930</integer>
+							</dict>
+							<key>files/stacks-image-22d1215-250x250.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								6850vL6xR3zu
+								I585rDTQ9A==
+								</data>
+								<key>Size</key>
+								<integer>83796</integer>
 							</dict>
 							<key>files/stacks-image-3edeb52-98x98.jpg</key>
 							<dict>
@@ -5010,11 +5030,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								jPswpinNXWgW
-								MAAL1narlw==
+								PLrLdlb9p90q
+								2K3pCXehXg==
 								</data>
 								<key>Size</key>
-								<integer>147496</integer>
+								<integer>151682</integer>
 							</dict>
 							<key>files/stacks_page_page48.js</key>
 							<dict>
@@ -5040,11 +5060,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								IM24R10DlF7D
-								oqV2vNtt1g==
+								/rWEkjb/SPCN
+								51aI/mCxNQ==
 								</data>
 								<key>Size</key>
-								<integer>95408</integer>
+								<integer>100153</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -7067,7 +7087,7 @@
 					<key>rw:document:extrafiles - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-06-10T10:15:08Z</date>
+						<date>2018-06-22T15:31:13Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -7116,11 +7136,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								OFCDNaztfXz/
-								kFNVbhp0Tg==
+								MTqGxtYxmiBG
+								B/tmZOf6SQ==
 								</data>
 								<key>Size</key>
-								<integer>4135</integer>
+								<integer>4295</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -7133,7 +7153,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-06-10T10:15:08Z</date>
+						<date>2018-06-22T15:31:13Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -8172,11 +8192,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								9Oskc1P0JxbH
-								aZs+5mc40A==
+								CaoIR+NUebYD
+								gJTRXtdWnw==
 								</data>
 								<key>Size</key>
-								<integer>2043</integer>
+								<integer>2131</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
