--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/01-Symposium---Health-and-Wellness/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/01-Symposium---Health-and-Wellness/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-06-09T18:00:21Z</date>
+						<date>2018-06-22T14:56:42Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -302,8 +302,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								gFM7klIxzJb2
-								36FbIAcSpQ==
+								+ucAoFP8hvcS
+								yBzTnTpVFg==
 								</data>
 								<key>Size</key>
 								<integer>63272</integer>
