--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/01-Symposium---Health-and-Wellness/ChildPages/1-Details/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/01-Symposium---Health-and-Wellness/ChildPages/1-Details/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-06-10T09:16:05Z</date>
+						<date>2018-06-22T14:56:42Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -402,11 +402,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								A6yDk9I9xf6L
-								xSIQNMNf6g==
+								Efy4KA44qoM4
+								e5cD+eQpvw==
 								</data>
 								<key>Size</key>
-								<integer>104194</integer>
+								<integer>104368</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
