--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/02-Symposium---Science-of-stories/ChildPages/1-Details/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/02-Symposium---Science-of-stories/ChildPages/1-Details/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-06-10T09:16:05Z</date>
+						<date>2018-06-22T16:37:40Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -107,6 +107,16 @@
 								</data>
 								<key>Size</key>
 								<integer>105930</integer>
+							</dict>
+							<key>files/stacks-image-22d1215-250x250.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								6850vL6xR3zu
+								I585rDTQ9A==
+								</data>
+								<key>Size</key>
+								<integer>83796</integer>
 							</dict>
 							<key>files/stacks-image-3edeb52-98x98.jpg</key>
 							<dict>
@@ -342,11 +352,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								jPswpinNXWgW
-								MAAL1narlw==
+								PLrLdlb9p90q
+								2K3pCXehXg==
 								</data>
 								<key>Size</key>
-								<integer>147496</integer>
+								<integer>151682</integer>
 							</dict>
 							<key>files/stacks_page_page48.js</key>
 							<dict>
@@ -372,11 +382,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								IM24R10DlF7D
-								oqV2vNtt1g==
+								/rWEkjb/SPCN
+								51aI/mCxNQ==
 								</data>
 								<key>Size</key>
-								<integer>95408</integer>
+								<integer>100153</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
