--- a/vermontcomplexsystems-foundation.rw/Pages/08-003Cheader003EPeople003C002Fheader003E/ChildPages/2-Core-Team/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/08-003Cheader003EPeople003C002Fheader003E/ChildPages/2-Core-Team/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-06-09T18:00:21Z</date>
+						<date>2018-06-22T14:56:42Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -82,8 +82,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								WTYkn1V4WAAW
-								zalnyuX+uQ==
+								LLMXV0RvEfeY
+								JPrDqS2Y7w==
 								</data>
 								<key>Size</key>
 								<integer>24594</integer>
