--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -4761,7 +4761,7 @@
 					<key>page48 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-06-24T21:08:30Z</date>
+						<date>2018-06-24T21:18:30Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -5110,11 +5110,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								hV9nkqWQ4KTA
-								ug7ghgvgJw==
+								4Q4bm+jF9GtI
+								nE6o2LWHhQ==
 								</data>
 								<key>Size</key>
-								<integer>105071</integer>
+								<integer>105114</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -7157,7 +7157,7 @@
 					<key>rw:document:extrafiles - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-06-24T21:08:30Z</date>
+						<date>2018-06-24T21:18:30Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -7206,11 +7206,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								bbDZI3fjRy0z
-								RKCyKe7PLQ==
+								DkJA+22y9L7m
+								qQnHRwrBSg==
 								</data>
 								<key>Size</key>
-								<integer>4198</integer>
+								<integer>4134</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -7223,7 +7223,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-06-24T21:08:30Z</date>
+						<date>2018-06-24T21:18:30Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -8262,11 +8262,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								CaoIR+NUebYD
-								gJTRXtdWnw==
+								9Oskc1P0JxbH
+								aZs+5mc40A==
 								</data>
 								<key>Size</key>
-								<integer>2131</integer>
+								<integer>2043</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
