updated hotel link for sos
updated hotel link for sos

--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -4761,7 +4761,7 @@
 					<key>page48 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-06-24T21:18:30Z</date>
+						<date>2018-06-25T15:29:36Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -5110,11 +5110,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								4Q4bm+jF9GtI
-								nE6o2LWHhQ==
+								1YgKzQhvPyQS
+								5l0IyZ7bkQ==
 								</data>
 								<key>Size</key>
-								<integer>105114</integer>
+								<integer>105143</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
