--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/02-Symposium---Science-of-stories/ChildPages/1-Details/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/02-Symposium---Science-of-stories/ChildPages/1-Details/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-06-24T21:18:30Z</date>
+						<date>2018-06-25T15:29:36Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -382,11 +382,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								4Q4bm+jF9GtI
-								nE6o2LWHhQ==
+								1YgKzQhvPyQS
+								5l0IyZ7bkQ==
 								</data>
 								<key>Size</key>
-								<integer>105114</integer>
+								<integer>105143</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
