--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -1249,7 +1249,7 @@
 					<key>page16 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-06-24T19:04:38Z</date>
+						<date>2018-06-25T15:43:34Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -1258,11 +1258,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								kYY5CFGjN74X
-								IuEzWWbHiA==
+								rob/c1Axx9jJ
+								zp9whlbG2w==
 								</data>
 								<key>Size</key>
-								<integer>44012</integer>
+								<integer>43724</integer>
 							</dict>
 							<key>index_files/small_109761.jpg</key>
 							<dict>
@@ -2609,7 +2609,7 @@
 					<key>page34 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-06-24T21:02:51Z</date>
+						<date>2018-06-25T15:43:34Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -2888,11 +2888,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								0ZtmyejtySX0
-								sx78puzRkw==
+								qEck+gwEzICD
+								6uXY+Ihe/g==
 								</data>
 								<key>Size</key>
-								<integer>70658</integer>
+								<integer>70370</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -2905,7 +2905,7 @@
 					<key>page35 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-06-24T21:02:51Z</date>
+						<date>2018-06-25T15:43:34Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -3144,11 +3144,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								oOPPlUA/Ak3i
-								YbLPP55QEA==
+								8YCrB0bXd8JA
+								hNDoqyDbbA==
 								</data>
 								<key>Size</key>
-								<integer>60087</integer>
+								<integer>59799</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
