--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/02-Symposium---Science-of-stories/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/02-Symposium---Science-of-stories/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-06-24T21:02:51Z</date>
+						<date>2018-06-25T15:43:34Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -272,11 +272,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								oOPPlUA/Ak3i
-								YbLPP55QEA==
+								8YCrB0bXd8JA
+								hNDoqyDbbA==
 								</data>
 								<key>Size</key>
-								<integer>60087</integer>
+								<integer>59799</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
