--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/01-Symposium---Health-and-Wellness/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/01-Symposium---Health-and-Wellness/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-06-24T21:02:51Z</date>
+						<date>2018-06-25T15:43:34Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -314,11 +314,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								0ZtmyejtySX0
-								sx78puzRkw==
+								qEck+gwEzICD
+								6uXY+Ihe/g==
 								</data>
 								<key>Size</key>
-								<integer>70658</integer>
+								<integer>70370</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
