--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-06-24T19:04:38Z</date>
+						<date>2018-06-25T15:43:34Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -42,11 +42,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								kYY5CFGjN74X
-								IuEzWWbHiA==
+								rob/c1Axx9jJ
+								zp9whlbG2w==
 								</data>
 								<key>Size</key>
-								<integer>44012</integer>
+								<integer>43724</integer>
 							</dict>
 							<key>index_files/small_109761.jpg</key>
 							<dict>
