--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -2905,7 +2905,7 @@
 					<key>page35 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-06-25T22:45:43Z</date>
+						<date>2018-06-26T13:41:24Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -3144,11 +3144,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								19VxVngCaXfI
-								IGdQCrYbkA==
+								t0cR8ouhcZs4
+								2KQJjaazhA==
 								</data>
 								<key>Size</key>
-								<integer>60613</integer>
+								<integer>60536</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -7157,7 +7157,7 @@
 					<key>rw:document:extrafiles - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-06-25T22:45:43Z</date>
+						<date>2018-06-26T13:41:24Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -7206,11 +7206,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								O3xxFZvqH/HC
-								peXssbh+1w==
+								DkJA+22y9L7m
+								qQnHRwrBSg==
 								</data>
 								<key>Size</key>
-								<integer>5478</integer>
+								<integer>4134</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -7223,7 +7223,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-06-25T21:13:50Z</date>
+						<date>2018-06-26T13:41:24Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -8262,11 +8262,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								CaoIR+NUebYD
-								gJTRXtdWnw==
+								CczgcQS6z/xA
+								kUK5wOQMvw==
 								</data>
 								<key>Size</key>
-								<integer>2131</integer>
+								<integer>3290</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
